...
    }()
    
    private var contentSize: CGSize {
        CGSize(width: view.frame.width, height: view.frame.height)
    }
    
    @objc private lazy var backButton: UIButton = {
        let button = UIButton.systemButton(
            with: UIImage(),
            target: self,
            action: #selector(Self.didTapBackButtonSingleImage)
        )
        button.setBackgroundImage(UIImage(named: "nav_back_button_white"), for: .normal)
...
